@@ -30,13 +30,13 @@ import sourceview.*;
 
 //{{{ jsXe classes
 import net.sourceforge.jsxe.jsXe;
-import net.sourceforge.jsxe.LocalizedAction;
+import net.sourceforge.jsxe.action.ContextSpecificAction;
 import net.sourceforge.jsxe.gui.TabbedView;
-import net.sourceforge.jsxe.gui.Messages;
 import net.sourceforge.jsxe.gui.DocumentView;
 //}}}
 
 //{{{ AWT classes
+import java.awt.Component;
 import java.awt.event.ActionEvent;
 //}}}
 
@@ -48,20 +48,10 @@ import java.awt.event.ActionEvent;
  * @version $Id$
  */
 
-public class EditFindAction extends LocalizedAction {
-    
-    //{{{ EditFindAction constructor
-    public EditFindAction() {
-        super(SourceViewPlugin.PLUGIN_NAME+".find");
-    }//}}}
-    
-    //{{{ getLabel()
-    public String getLabel() {
-        return Messages.getMessage("common.find");
-    }//}}}
+public class EditFindAction implements ContextSpecificAction.ActionImplementation {
     
     //{{{ invoke()
-    public void invoke(TabbedView view, ActionEvent evt) {
+    public void invoke(TabbedView view, Component comp, ActionEvent evt) {
         DocumentView docView = view.getDocumentView();
         if (docView instanceof SourceView) {
             SourceView sourceView = (SourceView)docView;
